--- a/.github/workflows/build-headless-docker.yml
+++ b/.github/workflows/build-headless-docker.yml
@@ -5,34 +5,40 @@ name: Master Branch Build - Build Bot Docker Container
 on:
   push:
     branches:
-      - master
+    - master
 jobs:
   build:
     env:
       IS_MASTER_BUILD: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-      - name: Login to GitHub Container Registry
-        if: ${{ env.IS_MASTER_BUILD }}
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: build headless docker container
-        if: ${{ env.IS_MASTER_BUILD }}
-        run: |
-          ./gradlew :game-app:game-headless:shadowJar
-          BUILD_VERSION=$(game-app/run/.build/get-build-version)
+    - uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 21
+    - name: Login to GitHub Container Registry
+      if: ${{ env.IS_MASTER_BUILD }}
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: build headless docker container
+      if: ${{ env.IS_MASTER_BUILD }}
+      run: |
+        ./gradlew :game-app:game-headless:shadowJar
+        BUILD_VERSION=$(game-app/run/.build/get-build-version)
 
-          docker build game-app/game-headless \
-            --tag ghcr.io/triplea-game/bot:latest \
-            --label gitSha="$(git rev-parse --short HEAD)" \
-            --label buildVersion="$BUILD_VERSION"
-          docker push ghcr.io/triplea-game/bot:latest
+        docker build game-app/game-headless \
+          --tag ghcr.io/triplea-game/bot:latest \
+          --label gitSha="$(git rev-parse --short HEAD)" \
+          --label buildVersion="$BUILD_VERSION"
+        docker push ghcr.io/triplea-game/bot:latest
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
