--- a/.github/workflows/upload-game-installers.yml
+++ b/.github/workflows/upload-game-installers.yml
@@ -2,48 +2,54 @@ name: Package and Upload Game Installers
 on:
   push:
     branches:
-      - master
+    - master
     paths:
-      - '.github/workflows/upload-game-installers.yml'
-      - 'build.gradle'
-      - 'game-app/**'
-      - 'http-clients/**'
-      - 'lib/**'
-      - 'servers/*/client/**'
+    - '.github/workflows/upload-game-installers.yml'
+    - 'build.gradle'
+    - 'game-app/**'
+    - 'http-clients/**'
+    - 'lib/**'
+    - 'servers/*/client/**'
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   build:
     runs-on: Ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
           # Fetch depth of 0 is needed so we checkout the full revision history
           # The current revision count will be used as our build-number
-          fetch-depth: '0'
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-      - name: set env variables
-        run: |
-          BUILD_VERSION=$(game-app/run/.build/get-build-version)
-          echo "build_version=$BUILD_VERSION" | tee -a $GITHUB_ENV
-          echo "release_name=$(date +%Y-%B-%d) - $BUILD_VERSION" | tee -a $GITHUB_ENV
-          echo "INSTALL4J_LICENSE_KEY=$INSTALL4J_LICENSE_KEY" | tee -a $GITHUB_ENV
-        env:
-          INSTALL4J_LICENSE_KEY: ${{ secrets.INSTALL4J_LICENSE_KEY }}
-      - name: Build Installers
-        run: ./game-app/run/package
-      - name: Create Github Release
-        uses: ncipollo/release-action@v1
-        with:        
-          artifacts: build/artifacts/*
-          tag: ${{ env.build_version }}
-          name: ${{ env.release_name }}
-          prerelease: true
-          commit: ${{ github.sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: '0'
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 21
+    - name: set env variables
+      run: |
+        BUILD_VERSION=$(game-app/run/.build/get-build-version)
+        echo "build_version=$BUILD_VERSION" | tee -a $GITHUB_ENV
+        echo "release_name=$(date +%Y-%B-%d) - $BUILD_VERSION" | tee -a $GITHUB_ENV
+        echo "INSTALL4J_LICENSE_KEY=$INSTALL4J_LICENSE_KEY" | tee -a $GITHUB_ENV
+      env:
+        INSTALL4J_LICENSE_KEY: ${{ secrets.INSTALL4J_LICENSE_KEY }}
+    - name: Build Installers
+      run: ./game-app/run/package
+    - name: Create Github Release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: build/artifacts/*
+        tag: ${{ env.build_version }}
+        name: ${{ env.release_name }}
+        prerelease: true
+        commit: ${{ github.sha }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
