--- a/.github/workflows/verify-urls-in-triplea-maps.yml
+++ b/.github/workflows/verify-urls-in-triplea-maps.yml
@@ -3,17 +3,23 @@ name: Verify URLs in triplea_maps.yaml
 on:
   push:
     paths:
-      - 'triplea_maps.yaml'
+    - 'triplea_maps.yaml'
   pull_request:
     paths:
-      - 'triplea_maps.yaml'
+    - 'triplea_maps.yaml'
   workflow_dispatch:  # Allows manual triggering from the GitHub UI
 
 jobs:
   check-urls:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Check URLs in triplea_maps.yaml
-        run: .github/workflows/verify-urls-in-triplea-maps.sh
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Check URLs in triplea_maps.yaml
+      run: .github/workflows/verify-urls-in-triplea-maps.sh
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
