--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -4,19 +4,25 @@ on:
   pull_request:
   push:
     branches:
-      - master
+    - master
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-      - name: Run Build Checks
+    - uses: actions/checkout@v4
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 21
+    - name: Run Build Checks
         # We skip 'spotlessApply' such that only 'spotlessCheck' will run to validate formatting.
         # This is a good setup for a CI server, meanwhile if a developer runs 'verify', they
         # will have the 'spotlessApply' task run and it will automatically format the code.
-        run: ./verify --exclude-task spotlessApply
+      run: ./verify --exclude-task spotlessApply
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
